# icarus-sim

./: CMakeLists.txt  LICENSE  model.config  package.xml
RobotPlugin/: CMakeLists.txt
RobotPlugin/src/: README.md  RobotPlugin.cpp  RobotPlugin.h
RobotPlugin/src/Actuator/LinearActuatorModel/: LinearActuatorModel.cpp  LinearActuatorModel.h
RobotPlugin/src/CameraPanTilt/: CameraPanTilt.cpp  CameraPanTilt.h
RobotPlugin/src/Power/BatteryModel/: BatteryModel.cpp  BatteryModel.h
RobotPlugin/src/Power/MotorControllerModel/: MotorControllerModel.cpp  MotorControllerModel.h
RobotPlugin/src/Power/MotorModel/: MotorModel.cpp  MotorModel.h
RobotPlugin/src/Sensor/IMU/: IMUSensor.cpp  IMUSensor.h
RobotPlugin/src/Sensor/Sonar/: SonarSensor.cpp  SonarSensor.h
RobotPlugin/src/Sensor/Truth/: TruthSensor.cpp  TruthSensor.h
RobotPlugin/src/Sensor/WheelEncoder/: WheelEncoderSensor.cpp  WheelEncoderSensor.h
SensorArm/: CMakeLists.txt
SensorArm/src/: BaseNode.cpp  BaseNode.h  BaseNodeProcess.cpp  BaseNodeProcess.h  SensorArmControllerProcess.cpp  SensorArmControllerProcess.h  sensorarm_controller_node.cpp  sensorarm_controller_node.h
include/: SimpleTimer.h
launch/: robot.launch  sensorarm.launch  simworld.launch
matlab/pose/: KalmanFilterUnitTestModel.slxc  Main.m  PoseExecutor.slxc  Pose_AutoCode.slxc  ToDo  test.slx
matlab/pose/Analysis/: RunAnalysis.m  check_model.m
matlab/pose/Config/: KalmanFilterAccelerationConfig.m  KalmanFilterOrientationConfig.m  KalmanFilterOrientationConfig.m~  KalmanFilterRotationRateConfig.m  Load_Configurables.m  ModelConfig.m  TimeCompensateConfig.m
matlab/pose/Development/: CMakeLists.txt  TestClass.m
matlab/pose/Development/DummyData/: create_dummydata_signallinkerblock.m  create_dummydata_timecompensatorblock.m
matlab/pose/Graphing/: DrawGraphs.m  DrawGraphs.m~  draw_linearacceleration_graphs.m  draw_magneticfield_graphs.m  draw_orientation_graphs.m  draw_rotationrate_graphs.m
matlab/pose/Helper/: check_model.m  check_model.m~  convert_inputsignal_sensorsignal.m  convert_modelsignal.m  convert_signaltype.m  map_signalclass_tostring.m  subset_signals.m
matlab/pose/Initializers/: Create_SimulinkBusObjects.m  Initialize.m  Initialize_SensorSignal.m  Initialize_Signal.m  Load_FilterConfig.m  Load_GlobalDefines.m  Load_SensorConfig.m  Load_SensorSignals.m  Load_TruthSignals.m  SamplingMethod.m  SignalClass.m  SignalIndex.m  SignalState.m  SignalType.m  eROS_Definitions.m
matlab/pose/Initializers/DummyData/: create_dummydata_timecompensatorblock.m
matlab/pose/PoseModel/: RunPoseModel.m
matlab/pose/PoseModel/Blocks/SensorPostProcess/: SensorPostProcess.m  SensorPostProcess_old.m
matlab/pose/PoseModel/Blocks/SignalLinker/: BaseMachineLinker.m  LinearAccelerationLinker.m  MasterLinker.m  OrientationLinker.m  RotationRateLinker.m  SignalSplitter.m
matlab/pose/PoseModel/Blocks/TimeCompensate/: timecompensate_signal.m  timecompensate_signal.m~
matlab/pose/PoseModel/Blocks/Timing/: TimeCompensate.m
matlab/pose/Simulink/: PoseExecutor.slx  PoseExecutor.slx.original  Pose_AutoCode.slx
matlab/pose/Simulink/PoseLibrary/: helperlibrary.slx  posefilter.slx  posemodel.slx  slblocks.m  timecompensate.slx
matlab/pose/Simulink/PoseLibrary/Filter/: AutoTune_KalmanFilterBlock.m  KalmanFilterUnitTestModel.slx  KalmanFilterUnitTestModel.slxc  KalmanFilterUnitTest_dataset.mat  UnitTest_KalmanFilterBlock.m  compute_variance_covariance_matrix.m
matlab/pose/slprj/_jitprj/: jitEngineAccessInfo.mat  s0KYOGBHUQVZMWca0AqgZlE.l  s0KYOGBHUQVZMWca0AqgZlE.mat  s0xNM6xfjWcAYVi0fFtdj5B.l  s0xNM6xfjWcAYVi0fFtdj5B.mat  s1rqJEi217PcZcPSPO7rD1E.l  s1rqJEi217PcZcPSPO7rD1E.mat  s2MlsrjIZOKlwG4ebOCXU0E.l  s2MlsrjIZOKlwG4ebOCXU0E.mat  s2epRQELyH00j40gjI459iC.l  s2epRQELyH00j40gjI459iC.mat  s33mteDhtsInIWccU9cGozG.l  s33mteDhtsInIWccU9cGozG.mat  s39IwQfsOcYfX0ZQYJli1LF.l  s39IwQfsOcYfX0ZQYJli1LF.mat  s3OdD42PkRvT13AZ5eRGKjH.l  s3OdD42PkRvT13AZ5eRGKjH.mat  s3loIy0vjhX6deX2XG7LbJE.l  s3loIy0vjhX6deX2XG7LbJE.mat  s4RGEGmDWsd183PkHrrxng.l  s4RGEGmDWsd183PkHrrxng.mat  s4YGqvREQlHVXs1uLSs2ymF.l  s4YGqvREQlHVXs1uLSs2ymF.mat  s55yPpNX2vOMWTteet3H91.l  s55yPpNX2vOMWTteet3H91.mat  s5aItSTs2hIKi5xqHTvcGSC.l  s5aItSTs2hIKi5xqHTvcGSC.mat  s67mZezfDWqvslMOGCFNfRD.l  s67mZezfDWqvslMOGCFNfRD.mat  s6dlzisNuIyGWxfRD9ftwcG.l  s6dlzisNuIyGWxfRD9ftwcG.mat  s6wR5gFonBOCyi9JYHbZctF.l  s6wR5gFonBOCyi9JYHbZctF.mat  s6yOD4Hc5jeIL9mYdtiHHEF.l  s6yOD4Hc5jeIL9mYdtiHHEF.mat  s759WjdpOxK1ND3ceZm9VN.l  s759WjdpOxK1ND3ceZm9VN.mat  s7gOPIBU0ofJaReISJJUGsB.l  s7gOPIBU0ofJaReISJJUGsB.mat  s7l25mjSxF9hB1XgBwrpbOG.l  (+276 more)
matlab/pose/slprj/_sfprj/EMLReport/: 0QAFGwya89FF9WdFPp8YfF.mat  0pUynj3evjyQPKgjU9bfaE.mat  BXXgw2qoatk9O0xrsx0kPE.mat  CZG8xP67gueKtc4XKi0ZvE.mat  EzFTWSOdVmYz6mfNpAB4u.mat  Kf0TAgKXxJCpJ1G2gigtgF.mat  R9u5gKh5wQzVDHsoqrsdWF.mat  W8a6iSVsC7B6GFHj7JAKAG.mat  Z34jCLqTIizIira8lC3GwC.mat  Zlx3XBJudkGEAHeKVzSXBC.mat  emlReportAccessInfo.mat  hD2ND2Nznr0DVbAsMUxaMD.mat  hHNpYxbDzbHlNzT2TzHrOD.mat  hcQ0gDpiKWCvoh9V99dXKE.mat  hndopCutupk2vAlBjudvhF.mat  s0KYOGBHUQVZMWca0AqgZlE.mat  (+185 more)
model/: scout.sdf
model/scout/: scout.sdf  scout_bk.sdf  scout_simple.sdf
model/velodyne/: model.config  velodyne.sdf
models/110010-RaspiCam1/: model.sdf
models/110015-3551284/: 110015-3551284.config  110015-3551284.sdf  IMUA (copy).xml  model.sdf
models/IMUA/: model.config
models/scout/: scout.sdf  scout.xml
models/scout/meshes/: 110010.stl  533015.stl  533016.stl  533017.stl
src/: MotorControllerModel.cpp  MotorControllerModel.h  MotorModel.cpp  MotorModel.h  README.md  RobotPlugin.cpp  RobotPlugin.h  robot_model.h  robot_plugin.cc  robot_plugin.cc_bk  vel.cc  velodyne_plugin.cc
src/Actuator/LinearActuatorModel/: LinearActuatorModel.cpp  LinearActuatorModel.h
src/Power/MotorControllerModel/: MotorControllerModel.cpp
src/Power/MotorModel/: MotorModel.cpp  MotorModel.h
src/Sensor/IMU/: IMUSensor.cpp  IMUSensor.h
src/Sensor/Truth/: TruthSensor.cpp  TruthSensor.h
src/Sensor/WheelEncoder/: WheelEncoderSensor.cpp  WheelEncoderSensor.h
worlds/: empty.world  foundation.world
(+407 files in other folders)
