add_library(RobotPlugin SHARED src/RobotPlugin.cpp)
add_dependencies(RobotPlugin eros_generate_messages_cpp)
add_library(LinearActuatorModel src/Actuator/LinearActuatorModel/LinearActuatorModel.cpp)
add_dependencies(LinearActuatorModel eros_generate_messages_cpp)
add_library(MotorControllerModel src/Power/MotorControllerModel/MotorControllerModel.cpp)
add_dependencies(MotorControllerModel eros_generate_messages_cpp)
add_library(IMUSensor src/Sensor/IMU/IMUSensor.cpp)
add_dependencies(IMUSensor eros_generate_messages_cpp)
add_library(TruthSensor src/Sensor/Truth/TruthSensor.cpp)
add_dependencies(TruthSensor eros_generate_messages_cpp)
add_library(WheelEncoderSensor src/Sensor/WheelEncoder/WheelEncoderSensor.cpp)
add_dependencies(WheelEncoderSensor eros_generate_messages_cpp)
add_library(MotorModel src/Power/MotorModel/MotorModel.cpp)
add_dependencies(MotorModel eros_generate_messages_cpp)
add_library(BatteryModel src/Power/BatteryModel/BatteryModel.cpp)
add_dependencies(BatteryModel eros_generate_messages_cpp)
target_link_libraries(RobotPlugin ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES} ${catkin_LIBRARIES} logger eros_math MotorControllerModel MotorModel IMUSensor TruthSensor WheelEncoderSensor BatteryModel LinearActuatorModel)
add_dependencies(RobotPlugin ${catkin_EXPORTED_TARGETS})



